# HomeAi

./: .gitignore  HomeAi.py  HomeAi.pyproj  HomeAi.sln  check_lmstudio.mjs  check_lmstudio.py
local-responses/: .env  .env.example  README.md  alembic.ini  body.json  make.ps1  pyproject.toml
local-responses/alembic/: env.py  script.py.mako
local-responses/alembic/versions/: 0001_initial.py  20240611_tool_runs.py  20250919_000001_m1p3_init.py  20250921_000002_summary_meta.py  20250922_000003_profile_init.py  20250923_000004_m3_memory_levels.py
local-responses/apps/api/: deps.py  main.py
local-responses/apps/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
local-responses/apps/web/src/: App.tsx  styles.css
local-responses/apps/web/src/components/: Badge.tsx  Controls.tsx  EventsConsole.tsx  MessageView.tsx  StatusIndicators.tsx
local-responses/apps/web/src/lib/: api.ts  sseParser.ts
local-responses/data/: app.db
local-responses/tests/: test_autosummary.py  test_budget_math.py  test_config.py  test_context_budgeter.py  test_context_builder_limits.py  test_context_core_cap.py  test_context_lang_follow.py  test_cost_usage.py  test_current_user_protection.py  test_get_messages_since_fallback.py  test_health.py  test_l1_ordering.py  test_memory_in_responses.py  test_memory_levels.py  test_model_context_endpoint.py  test_payload_contains_l2_l3.py  test_profile.py  test_responses.py  test_responses_budget_metadata.py  test_responses_with_assembly_metadata.py  test_storage.py  test_streaming.py  test_summary_pipeline.py
(+1 files in other folders)
