# pyproject.toml
[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "local-responses-hub"
version = "0.0.1"
description = "Local Responses Hub - Bootstrap skeleton (M0)"
authors = [{ name = "Local Team" }]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.2.1",
  "SQLAlchemy>=2.0.30",
  "alembic>=1.13.2",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "respx>=0.21.1",
  "ruff>=0.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["apps", "packages"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
extend-exclude = ["alembic/*", "data/*"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]
